Checkboxes assertions and also few static dropdown validations